# uvzmq

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README.md  README_CN.md  TUTORIAL.md  TUTORIAL_CN.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark.cpp  quick_benchmark.cpp  zmq_benchmark.cpp
cmake/: mimalloc_wrapper.c.in
docs/api/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  structuvzmq__socket__s-members.html  structuvzmq__socket__s.html  uvzmq_8h.html  uvzmq_8h_source.html
docs/api/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  classes_0.js  defines_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js
docs/en/: tutorial.md
docs/zh/: tutorial.md
examples/: CMakeLists.txt  bench_test.c  best_practices.c  direct_zmq_api.c  multi_thread.c  pub_sub.c  quick_test.c  req_rep.c  simple.c  test_allocator.c  test_bp.c  test_bp2.c  test_bp3.c  test_bp4.c  test_client.c  test_loop.c  test_loop_modes.c  test_loop_simple.c  test_minimal.c  test_perf_analysis.c  test_poll.c  test_push_pull.c  test_push_pull_event.c  test_simple.c  test_simple2.c  test_uv_only.c  test_uvzmq.c  test_zmq.c  test_zmq_perf.c  test_zmq_pubsub.c  zmq_compat.c
include/: uvzmq.h  uvzmq_features.h  uvzmq_types.h
src/: uvzmq.c  uvzmq_poller.c  uvzmq_socket.c
tests/: CMakeLists.txt  e2e_test.cpp  e2e_test.sh  test_io_threads_perf.c  test_reaper_cleanup.c  test_uvzmq.cpp  test_uvzmq_edge_cases.cpp  test_uvzmq_error_handling.cpp  test_uvzmq_getters.cpp  test_uvzmq_integration.cpp  test_uvzmq_socket_close.cpp  test_uvzmq_socket_free.cpp  test_uvzmq_socket_new.cpp
